[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { git = "https://github.com/aya-rs/aya" }
aegis-common = { path = "../aegis-common", features = ["user"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

